error handling, code structure refactoring

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "movie-choise",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.tsx",
   "scripts": {
     "build": "webpack --mode production",
     "start": "webpack-dev-server --open --mode development"
