--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/html-webpack-plugin": "^3.2.4",
     "@types/react-redux": "^7.1.11",
     "axios": "^0.21.0",
+    "css-modules-typescript-loader": "^4.0.1",
     "dotenv-webpack": "^5.0.0",
     "formik": "^2.2.1",
     "module-alias": "^2.2.2",
